Hintergrundtask bei Dashbaord holt jetzt Werte aus DB.